fix: resolve LazyInitialization and SpotBugs issues in Flashcard domain